# symbiflow-tools-data-manager

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: check_license.sh  ci.yml
stdm/: __init__.py
stpm/: __init__.py
tests/: test_get_symbiflow_arch_defs_tarball.py  test_stdm.py
